# mpc-snap-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
dependency/build-crypto-suites/: CMakeLists.txt  build.sh
dependency/build-multi-party-sig/: CMakeLists.txt  build.sh  multi-party-sig-cpp
dependency/build-openssl/: build.sh
dependency/build-protobuf/: build.sh
scripts/build-crypto-suites/: build.sh
scripts/build-docker-image/: Dockerfile  build.sh
scripts/build-multi-party-sig/: CMakeLists.txt  build.sh
scripts/build-openssl/: build.sh
scripts/build-protobuf/: build.sh
src/: aux_info_key_refresh.cpp  key_gen.cpp  key_recovery.cpp  minimal_key_gen.cpp  sign.cpp  util.cpp
src/common/: global_variables.cpp  global_variables.h  json_helper.cpp  json_helper.h  json_helper_ex.cpp  json_helper_ex.h  thread_safe_pointer_container.cpp  thread_safe_pointer_container.h  tools.cpp  tools.h
src/params/: aux_info_key_refresh_context_param.cpp  aux_info_key_refresh_context_param.h  exchange_message_param.cpp  exchange_message_param.h  key_gen_context_param.cpp  key_gen_context_param.h  key_recovery_context_param.cpp  key_recovery_context_param.h  minimal_key_gen_context_param.cpp  minimal_key_gen_context_param.h  minimal_key_param.cpp  minimal_key_param.h  sign_context_param.cpp  sign_context_param.h
